--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
    <html>
    <head>
        <title>НАТО</title>
+       <style>
+        body {
+    background-color: lightblue;
+    font-size: 16px;
+}
+       </style>
    </head>
    <body>
        <h1>НАТО</h1>
