Додав медіазапит (стилі для мобільних пристроїв)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     background-color: lightblue;
     font-size: 16px;
 }
+/* Медіазапит для екранів менше 600px */
+@media only screen and (max-width: 600px) {
+    body {
+        /* Змінюємо колір фону для мобільних пристроїв */
+        background-color: lightpink;
+        font-size: 22px;
+    }
+}
        </style>
    </head>
    <body>
