--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
     <h1>Ласкаво прошу на мій вебсайт!</h1>
 
     <!-- Відео з елементами керування -->
-    <video controls width="600" height="400">
-        <source src="video.mp4" type="video/mp4">
-    </video>
+    <section>
+        <h2>Відеоролик</h2>
+        <p>Це відео демонструє якусь цікаву подію.</p>
+        <video controls width="600" height="400">
+            <source src="video.mp4" type="video/mp4">
+        </video>
+    </section>
 
     <!-- Аудіофайл -->
-    <audio controls>
-        <source src="audio.mp3" type="audio/mp3">
-    </audio>
+    <section>
+        <h2>Аудіофайл</h2>
+        <p>Це аудіозапис із приємною музикою.</p>
+        <audio controls>
+            <source src="audio.mp3" type="audio/mp3">
+        </audio>
+    </section>
 
 </body>
 </html>
