--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <h2>Відеоролик</h2>
         <p>Це відео демонструє якусь цікаву подію.</p>
-        <video controls width="600" height="400">
+        <video width="600" height="400">
             <source src="video.mp4" type="video/mp4">
         </video>
     </section>
